[package]
name = "v-db-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuid2 = "0.1.0"
dotenv = "0.15.0"
sqlx = { version = "0.6.3",  features = [ "runtime-tokio-rustls", "mysql" ] }
tokio = { version = "1", features = ["full"] }
